--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
     <h1>Iframe Test Page</h1>
     <p>Below is an iframe embedded from YouTube:</p>
     <section>
-      <div class="bg-video"><iframe width="240" height="240" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" title="Champagne hældes op i glas" class="use-fitvids" src="https://player.vimeo.com/video/1008758890?app_id=122963&amp;muted=1&amp;autoplay=1&amp;loop=1&amp;background=1" id="bgv-d47139deb0db1"></iframe></div>
+      <div id="ssp-b920" class="static-spot">
+            <div class="image">
+
+                    <div class="bg-video"><iframe width="360" height="203" frameborder="0" allow="autoplay; fullscreen; picture-in-picture; clipboard-write" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen="" title="Test Video" class="use-fitvids cookieconsent-optin-marketing" data-cookieconsent="marketing" id="bgv-f6fa53f1a5883" style="display: block;" src="https://www.youtube.com/embed/IrdCBkXB91I?feature=oembed&amp;autoplay=1&amp;mute=1&amp;controls=0&amp;loop=1&amp;playlist=IrdCBkXB91I"></iframe><div class="cc-placeholder  cookieconsent-optout-marketing" data-cc-index="2" style="padding-top: 56.3889%; display: none;"><div class="cc-wrapper" style="margin-top: -56.3889%;"><p><span class="txt-sz-4" style="color: rgb(0, 51, 102);">Følgende indhold kræver samtykke accept af disse kategorier:</span><br><span class="txt-sz-5" style="color: rgb(0, 51, 102);">Marketing</span></p><a class="btn" tabindex="0">Ændre dit samtykke her</a></div></div></div>
+            </div>
+
+            <div class="text">
+                <h2 class="heading" id="h-07ea">Kontakt os</h2>
+<p>Du er velkommen til at ringe til os og få gode råd og vejledning samt et uforpligtende tilbud på en gulvbehandling.</p>            </div>
+
+        <div class="link link link-wrapper" id="slww-b920"><a aria-label="Kontakt" href="https://umbraco13.synergiweb.dk/kontakt/"><span>Læs mere</span></a></div>
+    </div>
     </section>
 </body>
 </html>
